--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
-@import "~vue-material/dist/theme/engine"; // Import the theme engine
+@import "~vue-material/dist/theme/engine";
 
 @include md-register-theme("default", (
   primary: #0D924F,
-  accent: md-get-palette-color(red, A200) // The accent or secondary color
+  accent: md-get-palette-color(red, A200)
 ));
 
-@import "~vue-material/dist/theme/all"; // Apply the theme
+@import "~vue-material/dist/theme/all";
