--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ $accent: md-get-palette-color(lightgreen, 100);
 
 @import "~vue-material/dist/theme/all";
 
-html, body, .md-app, .md-app-content {
+html, body, .app, .md-app, .md-app-content {
   height: 100%;
   display: flex;
   flex-direction: column;
